--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.Bus"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".BusActivity"
+            android:exported="false"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".BusStopActivity"
             android:exported="false"
             android:theme="@style/AppTheme.NoActionBar" />
